fixed overly bright shadow on dark mode

--- a/ext/css/material.css
+++ b/ext/css/material.css
@@ -136,9 +136,9 @@
     --background-color-light: #0a0a0a;
     --background-color-dark1: #333333;
 
-    --shadow-color: rgba(255, 255, 255, 0.185);
+    --shadow-color: rgba(255, 255, 255, 0.10);
     --shadow-color-off: rgba(255, 255, 255, 0);
-    --shadow-color-light: rgba(255, 255, 255, 0.085);
+    --shadow-color-light: rgba(255, 255, 255, 0.055);
 
     --accent-color: #4a91ed;
     --accent-color-light: #1a73e8;
